Refactor exception messages, streamline Account constructor, update BigDecimal comparisons, replace `Collectors.toList()` with `toList()`, improve tests, and enhance README formatting.