@@ -19,28 +19,21 @@ public class Account {
     private final LocalDateTime createdAt;
 
     public Account(String name, BigDecimal initialBalance) {
-        if (name == null || name.trim().isEmpty()) {
-            throw new IllegalArgumentException("Account name must not be null or blank");
-        }
-        BigDecimal balance = initialBalance != null ? initialBalance : BigDecimal.ZERO;
-        if (balance.compareTo(BigDecimal.ZERO) < 0) {
-            throw new IllegalArgumentException("Initial balance must not be negative");
-        }
-        this.id = null;
-        this.name = name.trim();
-        this.initialBalance = balance;
-        this.currentBalance = balance;
-        this.createdAt = LocalDateTime.now();
+        this(null, name, initialBalance, null, null);
     }
 
     public Account(Long id, String name, BigDecimal initialBalance, BigDecimal currentBalance, LocalDateTime createdAt) {
-        if (name == null || name.trim().isEmpty()) {
+        if (name == null || name.isBlank()) {
             throw new IllegalArgumentException("Account name must not be null or blank");
+        }
+        BigDecimal initBalance = initialBalance != null ? initialBalance : BigDecimal.ZERO;
+        if (initBalance.signum() < 0) {
+            throw new IllegalArgumentException("Initial balance must not be negative");
         }
         this.id = id;
         this.name = name.trim();
-        this.initialBalance = initialBalance != null ? initialBalance : BigDecimal.ZERO;
-        this.currentBalance = currentBalance != null ? currentBalance : this.initialBalance;
+        this.initialBalance = initBalance;
+        this.currentBalance = currentBalance != null ? currentBalance : initBalance;
         this.createdAt = createdAt != null ? createdAt : LocalDateTime.now();
     }
 
@@ -50,7 +43,7 @@ public class Account {
      * @param amount the non-null, positive amount to deposit
      */
     public void deposit(BigDecimal amount) {
-        if (amount == null || amount.compareTo(BigDecimal.ZERO) <= 0) {
+        if (amount == null || amount.signum() <= 0) {
             throw new IllegalArgumentException("Deposit amount must be strictly positive");
         }
         this.currentBalance = this.currentBalance.add(amount);
@@ -63,7 +56,7 @@ public class Account {
      * @throws InsufficientBalanceException if withdrawal exceeds current balance
      */
     public void withdraw(BigDecimal amount) {
-        if (amount == null || amount.compareTo(BigDecimal.ZERO) <= 0) {
+        if (amount == null || amount.signum() <= 0) {
             throw new IllegalArgumentException("Withdrawal amount must be strictly positive");
         }
         if (this.currentBalance.compareTo(amount) < 0) {
@@ -99,14 +92,27 @@ public class Account {
         Account account = (Account) o;
         return Objects.equals(id, account.id) &&
                 Objects.equals(name, account.name) &&
-                Objects.equals(initialBalance, account.initialBalance) &&
-                Objects.equals(currentBalance, account.currentBalance) &&
+                areEqual(initialBalance, account.initialBalance) &&
+                areEqual(currentBalance, account.currentBalance) &&
                 Objects.equals(createdAt, account.createdAt);
+    }
+
+    private static boolean areEqual(BigDecimal a, BigDecimal b) {
+        if (a == null) {
+            return b == null;
+        }
+        return b != null && a.compareTo(b) == 0;
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(id, name, initialBalance, currentBalance, createdAt);
+        return Objects.hash(
+                id,
+                name,
+                initialBalance != null ? initialBalance.stripTrailingZeros() : null,
+                currentBalance != null ? currentBalance.stripTrailingZeros() : null,
+                createdAt
+        );
     }
 
     @Override
